Archive2/0f/995c8059da16d0/output
main.cpp:2:1: error: template declaration of 'typedef'
 class A{ }
 ^
